# alonzo

./: .gitattributes  CHANGELOG  CNAME  README.md  TODO  alonzo.opam  dune  expr.ml  footer.pug  index.html  index.pug  lexer.mll  lonzo.ml  lonzo.opam  package.json  parser.mly  test.nz
lib/: bool.alonzo  nat.alonzo  test.alonzo
src/: alonzo.ml  dune  error.ml  expr.ml  lexer.mll  lonzo.ml  parser.mly  stlc.ml
